--- a/assets/grapejuice_main.glade
+++ b/assets/grapejuice_main.glade
@@ -191,6 +191,8 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="title" translatable="yes">Grapejuice</property>
+        <property name="show_close_button">True</property>
+        <property name="decoration_layout">menu:minimize,close</property>
         <child>
           <object class="GtkMenuButton">
             <property name="visible">True</property>
