--- a/assets/grapejuice_main.glade
+++ b/assets/grapejuice_main.glade
@@ -276,7 +276,16 @@
                   </packing>
                 </child>
                 <child>
-                  <placeholder/>
+                  <object class="GtkFixed">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="vexpand">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
                 </child>
                 <child>
                   <object class="GtkBox">
@@ -287,7 +296,9 @@
                       <object class="GtkLabel" id="update_status_label">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="halign">center</property>
                         <property name="label" translatable="yes">update_status</property>
+                        <property name="justify">center</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -302,6 +313,8 @@
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="halign">center</property>
+                        <property name="margin_top">15</property>
+                        <signal name="clicked" handler="perform_update" swapped="no"/>
                       </object>
                       <packing>
                         <property name="expand">False</property>
