--- a/assets/grapejuice_main.glade
+++ b/assets/grapejuice_main.glade
@@ -37,14 +37,6 @@
       </object>
     </child>
   </object>
-  <object class="GtkImage" id="icon_desktop">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="margin_top">5</property>
-    <property name="margin_bottom">5</property>
-    <property name="pixel_size">48</property>
-    <property name="icon_name">update-manager</property>
-  </object>
   <object class="GtkImage" id="icon_drive">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -75,25 +67,11 @@
     <property name="pixel_size">48</property>
     <property name="icon_name">text</property>
   </object>
-  <object class="GtkImage" id="icon_mime">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="margin_top">5</property>
-    <property name="margin_bottom">5</property>
-    <property name="pixel_size">48</property>
-    <property name="icon_name">text</property>
-  </object>
   <object class="GtkImage" id="icon_mime2">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="pixel_size">48</property>
     <property name="icon_name">ascii</property>
-  </object>
-  <object class="GtkImage" id="icon_protocol">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="pixel_size">48</property>
-    <property name="icon_name">redhat-tools</property>
   </object>
   <object class="GtkImage" id="icon_registry_editor">
     <property name="visible">True</property>
@@ -110,6 +88,14 @@
     <property name="margin_bottom">5</property>
     <property name="pixel_size">48</property>
     <property name="icon_name">view-refresh</property>
+  </object>
+  <object class="GtkImage" id="icon_reinstall1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="margin_top">5</property>
+    <property name="margin_bottom">5</property>
+    <property name="pixel_size">48</property>
+    <property name="icon_name">folder</property>
   </object>
   <object class="GtkImage" id="icon_roblox_studio">
     <property name="height_request">16</property>
@@ -147,12 +133,6 @@
     <property name="margin_bottom">5</property>
     <property name="pixel_size">48</property>
     <property name="icon_name">winetricks</property>
-  </object>
-  <object class="GtkImage" id="icons_file_assoc">
-    <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="pixel_size">48</property>
-    <property name="icon_name">filenew</property>
   </object>
   <object class="GtkPopoverMenu" id="main_menu">
     <property name="can_focus">False</property>
@@ -384,70 +364,6 @@
                 </child>
                 <child>
                   <object class="GtkButton">
-                    <property name="label" translatable="yes">Update desktop files</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="image">icon_desktop</property>
-                    <property name="image_position">top</property>
-                    <property name="always_show_image">True</property>
-                    <signal name="clicked" handler="update_desktop_files" swapped="no"/>
-                  </object>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="top_attach">0</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkButton">
-                    <property name="label" translatable="yes">Update protocol handlers</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="image">icon_protocol</property>
-                    <property name="image_position">top</property>
-                    <property name="always_show_image">True</property>
-                    <signal name="clicked" handler="update_protocol_handlers" swapped="no"/>
-                  </object>
-                  <packing>
-                    <property name="left_attach">2</property>
-                    <property name="top_attach">0</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkButton">
-                    <property name="label" translatable="yes">Install MIME files</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="image">icon_mime</property>
-                    <property name="image_position">top</property>
-                    <property name="always_show_image">True</property>
-                    <signal name="clicked" handler="install_mime_files" swapped="no"/>
-                  </object>
-                  <packing>
-                    <property name="left_attach">0</property>
-                    <property name="top_attach">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkButton">
-                    <property name="label" translatable="yes">Update file associations</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="image">icons_file_assoc</property>
-                    <property name="image_position">top</property>
-                    <property name="always_show_image">True</property>
-                    <signal name="clicked" handler="update_file_assoc" swapped="no"/>
-                  </object>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="top_attach">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkButton">
                     <property name="label" translatable="yes">Reinstall Grapejuice</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
@@ -459,8 +375,33 @@
                   </object>
                   <packing>
                     <property name="left_attach">2</property>
-                    <property name="top_attach">1</property>
+                    <property name="top_attach">0</property>
                   </packing>
+                </child>
+                <child>
+                  <object class="GtkButton">
+                    <property name="label" translatable="yes">Deploy Associations</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <property name="image">icon_reinstall1</property>
+                    <property name="image_position">top</property>
+                    <property name="always_show_image">True</property>
+                    <signal name="clicked" handler="deploy_assocs" swapped="no"/>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <placeholder/>
+                </child>
+                <child>
+                  <placeholder/>
+                </child>
+                <child>
+                  <placeholder/>
                 </child>
               </object>
               <packing>
