--- a/assets/glade/grapejuice_main.glade
+++ b/assets/glade/grapejuice_main.glade
@@ -188,11 +188,12 @@
   </object>
   <object class="GtkWindow" id="main_window">
     <property name="can_focus">False</property>
+    <property name="role">Grapejuice</property>
     <property name="resizable">False</property>
     <property name="default_width">550</property>
     <property name="default_height">300</property>
     <property name="icon">../grapejuice.svg</property>
-    <property name="startup_id">grapejuice</property>
+    <property name="startup_id">Grapejuice</property>
     <signal name="destroy" handler="on_destroy" swapped="no"/>
     <child type="titlebar">
       <object class="GtkHeaderBar">
