--- a/assets/glade/sparklepop.glade
+++ b/assets/glade/sparklepop.glade
@@ -308,11 +308,15 @@
                           <object class="GtkBox">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="margin_top">5</property>
+                            <property name="margin_top">10</property>
+                            <property name="margin_bottom">5</property>
+                            <property name="hexpand">True</property>
                             <child>
                               <object class="GtkLabel">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="halign">start</property>
+                                <property name="hexpand">True</property>
                                 <property name="label" translatable="yes">Broken</property>
                                 <attributes>
                                   <attribute name="weight" value="bold"/>
@@ -328,8 +332,8 @@
                               <object class="GtkSwitch" id="snapshot_info_broken">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
+                                <property name="halign">end</property>
                                 <property name="margin_left">10</property>
-                                <property name="margin_right">10</property>
                                 <signal name="activate" handler="snapshot_info_changed" swapped="no"/>
                                 <signal name="state-set" handler="snapshot_info_changed" swapped="no"/>
                               </object>
@@ -369,6 +373,10 @@
                             <property name="can_focus">True</property>
                             <property name="vexpand">True</property>
                             <property name="wrap_mode">word</property>
+                            <property name="left_margin">5</property>
+                            <property name="right_margin">5</property>
+                            <property name="top_margin">5</property>
+                            <property name="bottom_margin">5</property>
                             <property name="input_hints">GTK_INPUT_HINT_SPELLCHECK | GTK_INPUT_HINT_NONE</property>
                             <signal name="key-release-event" handler="snapshot_info_changed" swapped="no"/>
                           </object>
