--- a/assets/glade/grapejuice_main.glade
+++ b/assets/glade/grapejuice_main.glade
@@ -274,6 +274,20 @@
                   </packing>
                 </child>
                 <child>
+                  <object class="GtkButton">
+                    <property name="label" translatable="yes">Sparklepop (Registry snapshot utility)</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">True</property>
+                    <signal name="clicked" handler="launch_sparklepop" swapped="no"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkFixed">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
@@ -282,7 +296,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">1</property>
+                    <property name="position">2</property>
                   </packing>
                 </child>
                 <child>
@@ -326,7 +340,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">2</property>
+                    <property name="position">3</property>
                   </packing>
                 </child>
               </object>
